pyqt5 and license added

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,11 @@ name = "filebrowser"
 version = "0.1.0"
 description = ""
 authors = ["Matthias Maisch <matthias@maisch.me>"]
+license = "GPL-3.0-only"
 
 [tool.poetry.dependencies]
 python = "^3.8"
+PyQt5 = "^5.15.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
