--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ PyQt5 = "^5.15.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+pyinstaller = "^4.0"
 
 [tool.poetry.scripts]
 start = "filebrowser:main"
