--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ PyQt5 = "^5.15.0"
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 pyinstaller = "^4.0"
+bump2version = "^1.0.0"
 
 [tool.poetry.scripts]
 start = "filebrowser:main"
