--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -4,3 +4,7 @@ current_version = 0.1.0
 [bumpversion:file:pyproject.toml]
 search = version = "{current_version}"
 replace = version = "{new_version}"
+
+[bumpversion:file:filebrowser/__init__.py]
+search = __version__ = '{current_version}'
+replace = __version__ = '{new_version}'
